--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="C339 Lesson 12 Lighthouse practice">
 
   <title>
     C339 Lesson 12
